--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -14299,6 +14299,30 @@
   volume: "12"
   issn: "1093-6106"
 
+- author: "Benedetti, Carolina and González D’León, Rafael S. and Hanusa, Christopher R.H. and Harris, Pamela E. and Khare, Apoorva and Morales, Alejandro H. and Yip, Martha."
+  title: "The volume of the caracol polytope"
+  fjournal: "Séminaire Lotharingien de Combinatoire"
+  journal: "Sem. Lothar. Combin."
+  volume:  80B,
+  article: "#87"
+  year: 2018
+
+- author: Khare, Apoorva
+  title: Generalized nil-Coxeter algebras
+  fjournal: "Séminaire Lotharingien de Combinatoire"
+  journal: "Sem. Lothar. Combin."
+  volume:  80B,
+  article: "#29"
+  year: 2018
+
+- author: Khare, Apoorva and Tao, Terence.
+  title: Schur polynomials, entrywise positivity preservers, and weak majorization.
+  fjournal: "Séminaire Lotharingien de Combinatoire"
+  journal: "Sem. Lothar. Combin."
+  volume:  80B,
+  article: "#14"
+  year: 2018
+
 - author: "Rangarajan, G."
   title: "Symplectic integration of nonlinear Hamiltonian systems"
   journal: "Pramana -- Journal of Physics"
