--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -1617,6 +1617,21 @@
   volume: '249'
   issn: '0030-8730'
 
+- number: '2'
+  author: 'Guionnet, Alice and Krishnapur, Manjunath and Zeitouni, Ofer'
+  fjournal: 'Annals of Mathematics. Second Series'
+  url: 'https://doi.org/10.4007/annals.2011.174.2.10'
+  journal: 'Ann. of Math. (2)'
+  mrnumber: '2831116'
+  pages: '1189-1217'
+  year: '2011'
+  mrreviewer: 'Walid Hachem'
+  title: 'The single ring theorem'
+  doi: '10.4007/annals.2011.174.2.10'
+  mrclass: '60B20 (15B52)'
+  volume: '174'
+  issn: '0003-486X'
+
 - number: '1-2'
   author: 'Ayyer, Arvind and Schilling, Anne and Steinberg, Benjamin and Thi&#39;ery, Nicolas M.'
   fjournal: 'International Journal of Algebra and Computation'
@@ -12403,6 +12418,21 @@
   mrclass: '80A22 (80A20)'
   volume: '62'
   issn: '1386-6184'
+
+- number: '2'
+  author: 'Krishnapur, Manjunath and Kurlberg, P\"ar and Wigman, Igor'
+  fjournal: 'Annals of Mathematics. Second Series'
+  url: 'https://doi.org/10.4007/annals.2013.177.2.8'
+  journal: 'Ann. of Math. (2)'
+  mrnumber: '3010810'
+  pages: '699-737'
+  year: '2013'
+  mrreviewer: 'Nelia Charalambous'
+  title: 'Nodal length fluctuations for arithmetic random waves'
+  doi: '10.4007/annals.2013.177.2.8'
+  mrclass: '58C40 (60G60)'
+  volume: '177'
+  issn: '0003-486X'
 
 - author: 'Ayyer, Arvind and Prasad, Amritanshu and Spallone, Steven'
   fjournal: 'Journal of Combinatorial Theory. Series A'
