improved publications rendering

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -979,7 +979,7 @@
   mrnumber: '3869743'
   pages: '15-26'
   year: '2019'
-  title: 'On symmetry preserving and symmetry broken bright, dark and antidark soliton solutions of nonlocal nonlinear Schr\"odinger equation'
+  title: 'On symmetry preserving and symmetry broken bright, dark and antidark soliton solutions of nonlocal nonlinear Schr&oslash;dinger equation'
   doi: '10.1016/j.physleta.2018.10.011'
   mrclass: '35Q55 (35A30 35C08)'
   volume: '383'
@@ -1756,7 +1756,7 @@
   pages: '689-695'
   year: '2014'
   mrreviewer: 'Zhi Jiang'
-  title: 'On the K\"ahler structures over Quot schemes, II'
+  title: 'On the K&auml;hler structures over Quot schemes, II'
   mrclass: '14H60 (14H81 32Q10)'
   volume: '58'
   issn: '0019-2082'
@@ -2126,7 +2126,7 @@
 
 - number: '1'
   author: 'Maity, Dipendu'
-  fjournal: 'Beitr\"age zur Algebra und Geometrie. Contributions to Algebra and Geometry'
+  fjournal: 'Beitr&auml;ge zur Algebra und Geometrie. Contributions to Algebra and Geometry'
   url: 'https://doi.org/10.1007/s13366-018-0405-7'
   journal: 'Beitr. Algebra Geom.'
   mrnumber: '3916238'
@@ -3494,7 +3494,7 @@
 
 - number: '3'
   author: 'Kreuzer, Martin and Patil, Dilip P.'
-  fjournal: 'Beitr\"age zur Algebra und Geometrie. Contributions to Algebra and Geometry'
+  fjournal: 'Beitr&auml;ge zur Algebra und Geometrie. Contributions to Algebra and Geometry'
   url: 'https://doi.org/10.1007/s13366-016-0324-4'
   journal: 'Beitr. Algebra Geom.'
   mrnumber: '3683021'
@@ -3550,7 +3550,7 @@
   issn: '1433-5883'
 
 - number: '1-2'
-  author: 'B\"ocherer, Siegfried and Das, Soumya'
+  author: 'B&oslash;cherer, Siegfried and Das, Soumya'
   fjournal: 'Mathematische Zeitschrift'
   url: 'https://doi.org/10.1007/s00209-015-1609-2'
   journal: 'Math. Z.'
@@ -4179,7 +4179,7 @@
 
 - number: '3'
   author: 'Datta, Basudeb and Maity, Dipendu'
-  fjournal: 'Beitr\"age zur Algebra und Geometrie. Contributions to Algebra and Geometry'
+  fjournal: 'Beitr&auml;ge zur Algebra und Geometrie. Contributions to Algebra and Geometry'
   url: 'https://doi.org/10.1007/s13366-017-0332-z'
   journal: 'Beitr. Algebra Geom.'
   mrnumber: '3683032'
@@ -4940,8 +4940,8 @@
   mrnumber: '3815225'
   pages: '23-40'
   year: '2018'
-  mrreviewer: 'Gabriella B\"ohm'
-  title: 'Modular Hecke algebras over M\"obius categories'
+  mrreviewer: 'Gabriella B&oslash;hm'
+  title: 'Modular Hecke algebras over M&oslash;bius categories'
   doi: '10.1016/j.geomphys.2018.04.008'
   mrclass: '16T05 (11F03)'
   volume: '131'
@@ -5861,7 +5861,7 @@
   pages: '1850041, 8'
   year: '2018'
   mrreviewer: 'Chi Li'
-  title: 'Existence of coupled K\"ahler-Einstein metrics using the continuity method'
+  title: 'Existence of coupled K&auml;hler-Einstein metrics using the continuity method'
   doi: '10.1142/S0129167X18500416'
   mrclass: '32Q20 (53C25)'
   volume: '29'
@@ -6507,7 +6507,7 @@
   mrnumber: '3836111'
   pages: '083103, 12'
   year: '2018'
-  title: 'Deformation of dark solitons in a $\mathcal{PT}$-invariant variable coefficients nonlocal nonlinear Schr\"odinger equation'
+  title: 'Deformation of dark solitons in a $\mathcal{PT}$-invariant variable coefficients nonlocal nonlinear Schr&oslash;dinger equation'
   doi: '10.1063/1.5039901'
   mrclass: '82C10'
   volume: '28'
@@ -6760,7 +6760,7 @@
   pages: 'vi+202'
   year: '2015'
   editor: 'Bhattacharyya, Tirthankar and Dritschel, Michael A.'
-  publisher: 'Birkh\"auser/Springer, Cham'
+  publisher: 'Birkh&auml;user/Springer, Cham'
   isbn: '978-3-319-18181-3; 978-3-319-18182-0'
   booktitle: 'Proceedings of the 24th International Workshop in Operator Theory and its Applications (IWOTA) held at the Indian Institute of Science, Bangalore, December 16-20, 2013'
   title: 'Operator algebras and mathematical physics'
@@ -8507,7 +8507,7 @@
   mrnumber: '3787524'
   pages: '365-375'
   year: '2018'
-  mrreviewer: 'Thomas Kr\"amer'
+  mrreviewer: 'Thomas Kr&auml;mer'
   title: 'A topological Nullstellensatz for tensor-triangulated categories'
   doi: '10.1016/j.crma.2018.02.012'
   mrclass: '18E30 (14A20)'
@@ -8685,7 +8685,7 @@
   mrclass: '76N15 (35L60 35L65 35L67 65M08)'
   volume: '4'
 
-- author: 'B\"ocherer, Siegfried and Das, Soumya'
+- author: 'B&oslash;cherer, Siegfried and Das, Soumya'
   fjournal: 'Journal f\"ur die Reine und Angewandte Mathematik. [Crelle&#39;s Journal]'
   url: 'https://doi.org/10.1515/crelle-2015-0075'
   journal: 'J. Reine Angew. Math.'
@@ -11263,7 +11263,7 @@
   mrnumber: '3894855'
   pages: 'Art. 6, 13'
   year: '2018'
-  title: 'A characterization of finite vector bundles on Gauduchon astheno-K\"ahler manifolds'
+  title: 'A characterization of finite vector bundles on Gauduchon astheno-K&auml;hler manifolds'
   mrclass: '32L10 (14D20 53C55)'
   volume: '2'
   issn: '2491-6765'
@@ -11919,7 +11919,7 @@
   volume: '41'
   issn: '0020-7225'
 
-- author: 'B\"ocherer, Siegfried and Das, Soumya'
+- author: 'B&oslash;cherer, Siegfried and Das, Soumya'
   fjournal: 'Advances in Mathematics'
   url: 'https://doi.org/10.1016/j.aim.2018.07.033'
   journal: 'Adv. Math.'
@@ -12420,7 +12420,7 @@
   issn: '1386-6184'
 
 - number: '2'
-  author: 'Krishnapur, Manjunath and Kurlberg, P\"ar and Wigman, Igor'
+  author: 'Krishnapur, Manjunath and Kurlberg, P&auml;r and Wigman, Igor'
   fjournal: 'Annals of Mathematics. Second Series'
   url: 'https://doi.org/10.4007/annals.2013.177.2.8'
   journal: 'Ann. of Math. (2)'
