lastname, firstname for PolyMath

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -9334,7 +9334,7 @@
   issn: '0036-1429'
 
 - number: '7'
-  author: 'Tobias Fritz, Siddhartha Gadgil, Apoorva Khare, Pace P. Nielsen, Lior Silberman and Terence Tao'
+  author: 'Fritz, Tobias and Gadgil, Siddhartha and Khare, Apoorva and Nielsen, Pace P. and Silberman, Lior and Tao, Terence'
   fjournal: 'Algebra \& Number Theory'
   url: 'https://doi.org/10.2140/ant.2018.12.1773'
   journal: 'Algebra Number Theory'
