--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -8547,7 +8547,7 @@
   mrreviewer: 'Jae-Hyun Yang'
   publisher: 'Ramanujan Math. Soc., Mysore'
   booktitle: 'The legacy of Srinivasa Ramanujan'
-  title: 'Some remarks on the Resnikoff-Salda\~na conjecture'
+  title: 'Some remarks on the Resnikoff-Salda&ntilde;a conjecture'
   mrclass: '11F30 (11F46)'
   volume: '20'
 
