--- a/_data/extrapubs.yaml
+++ b/_data/extrapubs.yaml
@@ -5,6 +5,7 @@
   volume:  80B,
   article: "#87"
   year: 2018
+  url: 'https://www.mat.univie.ac.at/~slc/wpapers/FPSAC2018/87-AIM2016.html'
 
 - author: Khare, Apoorva
   title: Generalized nil-Coxeter algebras
@@ -13,6 +14,7 @@
   volume:  80B,
   article: "#29"
   year: 2018
+  url: 'http://www.mat.univie.ac.at/~slc/wpapers/FPSAC2018/29-Khare.html'
 
 - author: Khare, Apoorva and Tao, Terence.
   title: Schur polynomials, entrywise positivity preservers, and weak majorization.
@@ -21,6 +23,7 @@
   volume:  80B,
   article: "#14"
   year: 2018
+  url: 'http://www.mat.univie.ac.at/~slc/wpapers/FPSAC2018/14-Khare-Tao.html'
 
 - author: "Rangarajan, G."
   title: "Symplectic integration of nonlinear Hamiltonian systems"
