--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -14336,6 +14336,7 @@
   volume:  80B,
   article: "#87"
   year: 2018
+  url: 'https://www.mat.univie.ac.at/~slc/wpapers/FPSAC2018/87-AIM2016.html'
 
 - author: Khare, Apoorva
   title: Generalized nil-Coxeter algebras
@@ -14344,6 +14345,7 @@
   volume:  80B,
   article: "#29"
   year: 2018
+  url: 'http://www.mat.univie.ac.at/~slc/wpapers/FPSAC2018/29-Khare.html'
 
 - author: Khare, Apoorva and Tao, Terence.
   title: Schur polynomials, entrywise positivity preservers, and weak majorization.
@@ -14352,6 +14354,7 @@
   volume:  80B,
   article: "#14"
   year: 2018
+  url: 'http://www.mat.univie.ac.at/~slc/wpapers/FPSAC2018/14-Khare-Tao.html'
 
 - author: "Rangarajan, G."
   title: "Symplectic integration of nonlinear Hamiltonian systems"
